# inspect_fast_loader

./: .gitignore  INSPECT_LOG_FORMAT.md  README.md  benchmark.py  benchmark_baseline.py  benchmark_comparison.py  benchmark_comprehensive.py  benchmark_fresh_process.py  build_native.py  cost_tracker.py  file_cache.py  generate_test_logs.py  plot_benchmark.py  plot_benchmark_bypass.py  plot_comprehensive.py  plot_fresh_process.py  profile_headers.py  pyproject.toml
inspect_fast_loader/: Cargo.toml  _cli.py  _construct.py  _patch.py  _zip.py  pyproject.toml
inspect_fast_loader/python/inspect_fast_loader/: __init__.py  _construct.py  _patch.py  _zip.py
inspect_fast_loader/src/: lib.rs
inspect_fast_loader/tests/: conftest.py  helpers.py  test_bypass_correctness.py  test_correctness.py  test_coverage_gaps.py  test_edge_cases.py  test_log_generator.py  test_new_patches.py  test_smoke.py
results/: benchmark_baseline.jsonl  benchmark_bypass_comparison.jsonl  benchmark_bypass_final.jsonl  benchmark_comparison.jsonl  benchmark_comparison_v2.jsonl  benchmark_comprehensive_20260306_101250.jsonl  benchmark_comprehensive_20260306_104450.jsonl  benchmark_fresh_process_20260306_105752.jsonl  benchmark_fresh_process_20260306_113601.jsonl  benchmark_fresh_process_20260306_122905.jsonl
rust/: Cargo.toml  pyproject.toml
tests/: conftest.py  helpers.py  test_correctness.py  test_coverage_gaps.py  test_edge_cases.py  test_log_generator.py  test_new_patches.py  test_real_logs.py  test_smoke.py
writeups/: continuation_context.md  progress_log_code_cleanup_and_review.md  progress_log_core_rust_implementation.md  progress_log_documentation_scaffold_setup.md  progress_log_optimization_features_polish.md  progress_log_pydantic_bypass_optimization.md  write_up.md  write_up_code_cleanup_and_review.md  write_up_core_rust_implementation.md  write_up_documentation_scaffold_setup.md  (+2 more)
(+2 files in other folders)
