[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-fast-loader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["inspect_ai"]

[tool.setuptools.packages.find]
include = ["inspect_fast_loader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
