[build-system]
requires = ["setuptools>=68.0", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-fast-loader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["inspect_ai"]

[project.scripts]
fast-inspect = "inspect_fast_loader._cli:main"

[tool.setuptools.packages.find]
include = ["inspect_fast_loader*"]

[[tool.setuptools-rust.ext-modules]]
target = "inspect_fast_loader._native"
path = "rust/Cargo.toml"
binding = "PyO3"
optional = true
debug = false

[tool.pytest.ini_options]
testpaths = ["tests"]
