[package]
name = "inspect_fast_loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "inspect_fast_loader"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
